--- a/100_Numpy_exercises solution.ipynb
+++ b/100_Numpy_exercises solution.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "37ccbe9c",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "e11f8e09",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "'1.26.4'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "49998c7e",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "ba1b6c72",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "228"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "dc0df633",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "e265534d",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "48a0a30c",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "d9922f6c",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "       44, 45, 46, 47, 48])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "caca76e3",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "       14, 13, 12, 11, 10])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "a78b7c74",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "9a696563",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
        "(array([0, 1, 4], dtype=int64),)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "9800bdbc",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,27 +418,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "id": "d2ef1f3b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[14, 20, 23],\n",
-       "        [ 6, 15, 17],\n",
-       "        [26, 25,  1]],\n",
+       "array([[[ 9, 12, 13],\n",
+       "        [20, 18, 14],\n",
+       "        [26, 21,  1]],\n",
        "\n",
-       "       [[ 1,  1, 11],\n",
-       "        [15, 12, 16],\n",
-       "        [13, 11, 24]],\n",
+       "       [[ 8, 17,  9],\n",
+       "        [25,  2,  9],\n",
+       "        [ 1,  3, 17]],\n",
        "\n",
-       "       [[ 4, 13,  4],\n",
-       "        [25,  5,  7],\n",
-       "        [16,  3, 19]]])"
+       "       [[ 6, 19,  2],\n",
+       "        [12, 17, 13],\n",
+       "        [ 0, 10, 13]]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,26 +458,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "id": "075f6fbd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[80,  1, 63, 87, 70, 19, 13, 69, 60,  3],\n",
-       "       [18, 89, 14, 13, 89, 27, 61,  2, 92, 17],\n",
-       "       [35, 57, 30, 79, 80, 80, 41, 18, 83, 23],\n",
-       "       [11, 44,  7, 35, 44, 57, 14, 59, 39, 19],\n",
-       "       [31, 60, 30, 57,  2, 38, 52, 93, 80, 41],\n",
-       "       [93, 27, 27, 17, 41, 31, 71, 73,  7, 40],\n",
-       "       [53, 56, 40, 96, 87, 82,  5, 58, 37, 18],\n",
-       "       [55, 23, 11, 90,  3, 73, 13, 89, 77, 17],\n",
-       "       [40, 17, 69, 48, 87, 12, 91, 81, 52, 38],\n",
-       "       [50,  7, 72,  9, 84, 40, 30, 95, 29, 45]])"
+       "array([[60, 43, 39, 42,  1, 61, 87, 12, 71, 19],\n",
+       "       [61, 56, 42, 72, 76, 16, 47, 83, 83, 55],\n",
+       "       [57, 89, 92, 56, 18, 47, 66, 58, 71,  7],\n",
+       "       [88,  5, 84,  8, 60, 62, 30, 65, 38, 78],\n",
+       "       [20, 67, 55, 55, 29, 81, 35, 77, 38, 69],\n",
+       "       [93, 39, 34, 44, 44, 51, 46, 57,  2, 36],\n",
+       "       [98,  1, 45, 64, 59, 70, 53, 16, 71, 44],\n",
+       "       [ 3, 79, 95, 77,  1, 20, 45, 26, 39, 70],\n",
+       "       [ 5, 61, 91, 51,  6, 86, 65,  4, 56, 83],\n",
+       "       [24, 49, 65, 62, 71, 39, 19, 88, 85,  8]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,17 +489,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "id": "ccd07c71",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(96, 1)"
+       "(98, 1)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,17 +518,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "id": "cfb32bda",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "26.0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,11 +547,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "60b5d358",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.ones(25).reshape(5,5)\n",
+    "a[1:4,1:4]=0\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -563,11 +582,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "22299701",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.ones((10,10))\n",
+    "a[:,[0,-1]]=0\n",
+    "a[[0,-1],:]=0\n",
+    "a\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -587,11 +631,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "9758dbf1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0 * np.nan\n",
+    "np.nan == np.nan\n",
+    "np.inf > np.nan\n",
+    "np.nan - np.nan\n",
+    "np.nan in set([np.nan])\n",
+    "0.3 == 3 * 0.1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -603,11 +665,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "e5e50c3a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 2., 0., 0., 0.],\n",
+       "       [0., 0., 3., 0., 0.],\n",
+       "       [0., 0., 0., 4., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.zeros((5,5))\n",
+    "np.fill_diagonal(a, [1,2,3,4])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "fa3e103d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [0, 2, 0, 0, 0],\n",
+       "       [0, 0, 3, 0, 0],\n",
+       "       [0, 0, 0, 4, 0]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.diag(1+np.arange(4),k=-1)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -619,11 +726,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "c80b9dd8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.zeros((8,8))\n",
+    "a[1::2,::2]=1\n",
+    "a[::2,1::2]=1\n",
+    "\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
